syntax = "proto3";

option go_package = "microService/modules/auth/authPb;authPb";


message AccessTokenSearchReq {
    string accessToken = 1;
}

message AccessTokenSearchRes {
    bool isValid = 1;
}

message RolesCountReq {}

message RolesCountRes {
    int64 count = 1;
}

service AuthGrpcService {
    rpc AccessTokenSearch(AccessTokenSearchReq) returns (AccessTokenSearchRes);
    rpc RolesCount(RolesCountReq) returns (RolesCountRes);
}